--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <h1>Where I'm From</h1>
       <p>Toronto.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>cycling, philately</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software Engineer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Torornto</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I love Creating Web PAges</p>
     </section>
 
     <footer id="footer">
