--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1>Introduction</h1>
       <p>software fresher.</p>
       <h1>Where I'm From</h1>
-      <p>Toronto.</p>
+      <p>Toronto</p>
       <h1>What are your favorite hobbies?</h1>
       <p>cycling, philately</p>
       <h1>What's your dream job?</h1>
